cmake_minimum_required(VERSION 3.25)
project(LeetCodeFly)

set(CMAKE_CXX_STANDARD 14)
add_executable(2129_Capitalize_the_Title Easy/2129_Capitalize_the_Title.cpp)
add_executable(1859_Sorting_the_Sentence Easy/1859_Sorting_the_Sentence.cpp)
add_executable(1528_Shuffle_String Easy/1528_Shuffle_String.cpp)
add_executable(1295_Find_Numbers_with_Even_Number_of_Digits Easy/1295_Find_Numbers_with_Even_Number_of_Digits.cpp)
add_executable(1252_Cells_with_Odd_Values_in_a_Matrix Easy/1252_Cells_with_Odd_Values_in_a_Matrix.cpp)
add_executable(935_Knight_Dialer Medium/935_Knight_Dialer.cpp)
add_executable(64_Minimum_Path_Sum Medium/64_Minimum_Path_Sum.cpp)
add_executable(65_Valid_Number Hard/65_Valid_Number.cpp)
add_executable(29_Divide_Two_Integers Medium/29_Divide_Two_Integers.cpp)
add_executable(2147_Number_of_Ways_to_Divide_a_Long_Corridor Hard/2147_Number_of_Ways_to_Divide_a_Long_Corridor.cpp)