cmake_minimum_required(VERSION 3.25)
project(LeetCodeFly)

set(CMAKE_CXX_STANDARD 23)
add_executable(2129_Capitalize_the_Title Easy/2129_Capitalize_the_Title.cpp)
add_executable(1859_Sorting_the_Sentence Easy/1859_Sorting_the_Sentence.cpp)
add_executable(1528_Shuffle_String Easy/1528_Shuffle_String.cpp)
add_executable(1295_Find_Numbers_with_Even_Number_of_Digits Easy/1295_Find_Numbers_with_Even_Number_of_Digits.cpp)
add_executable(1252_Cells_with_Odd_Values_in_a_Matrix Easy/1252_Cells_with_Odd_Values_in_a_Matrix.cpp)
add_executable(935_Knight_Dialer Medium/935_Knight_Dialer.cpp)
add_executable(64_Minimum_Path_Sum Medium/64_Minimum_Path_Sum.cpp)
add_executable(65_Valid_Number Hard/65_Valid_Number.cpp)
add_executable(29_Divide_Two_Integers Medium/29_Divide_Two_Integers.cpp)
add_executable(2147_Number_of_Ways_to_Divide_a_Long_Corridor Hard/2147_Number_of_Ways_to_Divide_a_Long_Corridor.cpp)
add_executable(880_Decoded_String_at_Index Medium/880_Decoded_String_at_Index.cpp)
add_executable(1002_Find_Common_Characters Easy/1002_Find_Common_Characters.cpp)
add_executable(1268_Search_Suggestions_System Medium/1268_Search_Suggestions_System.cpp)
add_executable(1286_Iterator_for_Combination Medium/1286_Iterator_for_Combination.cpp)
add_executable(1611_Minimum_One_Bit_Operations_to_Make_Integers_Zero Hard/1611_Minimum_One_Bit_Operations_to_Make_Integers_Zero.cpp)
add_executable(225_Implement_Stack_using_Queues Easy/225_Implement_Stack_using_Queues.cpp)
add_executable(62_Unique_Paths Medium/62_Unique_Paths.cpp)
add_executable(820_Short_Encoding_of_Words Medium/820_Short_Encoding_of_Words.cpp)
add_executable(316_Remove_Duplicate_Letters Medium/316_Remove_Duplicate_Letters.cpp)
add_executable(1662_Check_If_Two_String_Arrays_are_Equivalent Easy/1662_Check_If_Two_String_Arrays_are_Equivalent.cpp)
add_executable(725_Split_Linked_List_in_Parts Medium/725_Split_Linked_List_in_Parts.cpp)
add_executable(1592_Rearrange_Spaces_Between_Words Easy/1592_Rearrange_Spaces_Between_Words.cpp)
add_executable(test test.cpp)