cmake_minimum_required(VERSION 3.25)
project(LeetCodeFly)

set(CMAKE_CXX_STANDARD 23)
add_executable(2129_Capitalize_the_Title Easy/2129_Capitalize_the_Title.cpp)
add_executable(1859_Sorting_the_Sentence Easy/1859_Sorting_the_Sentence.cpp)
add_executable(1528_Shuffle_String Easy/1528_Shuffle_String.cpp)
add_executable(1295_Find_Numbers_with_Even_Number_of_Digits Easy/1295_Find_Numbers_with_Even_Number_of_Digits.cpp)
add_executable(1252_Cells_with_Odd_Values_in_a_Matrix Easy/1252_Cells_with_Odd_Values_in_a_Matrix.cpp)
add_executable(935_Knight_Dialer Medium/935_Knight_Dialer.cpp)
add_executable(64_Minimum_Path_Sum Medium/64_Minimum_Path_Sum.cpp)
add_executable(65_Valid_Number Hard/65_Valid_Number.cpp)
add_executable(29_Divide_Two_Integers Medium/29_Divide_Two_Integers.cpp)
add_executable(2147_Number_of_Ways_to_Divide_a_Long_Corridor Hard/2147_Number_of_Ways_to_Divide_a_Long_Corridor.cpp)
add_executable(880_Decoded_String_at_Index Medium/880_Decoded_String_at_Index.cpp)
add_executable(1002_Find_Common_Characters Easy/1002_Find_Common_Characters.cpp)
add_executable(1268_Search_Suggestions_System Medium/1268_Search_Suggestions_System.cpp)
add_executable(1286_Iterator_for_Combination Medium/1286_Iterator_for_Combination.cpp)
add_executable(1611_Minimum_One_Bit_Operations_to_Make_Integers_Zero Hard/1611_Minimum_One_Bit_Operations_to_Make_Integers_Zero.cpp)
add_executable(225_Implement_Stack_using_Queues Easy/225_Implement_Stack_using_Queues.cpp)
add_executable(62_Unique_Paths Medium/62_Unique_Paths.cpp)
add_executable(820_Short_Encoding_of_Words Medium/820_Short_Encoding_of_Words.cpp)
add_executable(316_Remove_Duplicate_Letters Medium/316_Remove_Duplicate_Letters.cpp)
add_executable(1662_Check_If_Two_String_Arrays_are_Equivalent Easy/1662_Check_If_Two_String_Arrays_are_Equivalent.cpp)
add_executable(725_Split_Linked_List_in_Parts Medium/725_Split_Linked_List_in_Parts.cpp)
add_executable(1592_Rearrange_Spaces_Between_Words Easy/1592_Rearrange_Spaces_Between_Words.cpp)
add_executable(2949_Count_Beautiful_Substrings_II Hard/2949_Count_Beautiful_Substrings_II.cpp)
add_executable(2947_Count_Beautiful_Substrings_I Medium/2947_Count_Beautiful_Substrings_I.cpp)
add_executable(1342_Number_of_Steps_to_Reduce_a_Number_to_Zero Easy/1342_Number_of_Steps_to_Reduce_a_Number_to_Zero.cpp)
add_executable(1455_Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence Easy/1455_Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence.cpp)
add_executable(1716_Calculate_Money_in_Leetcode_Bank Easy/1716_Calculate_Money_in_Leetcode_Bank.cpp)
add_executable(433_Minimum_Genetic_Mutation Medium/433_Minimum_Genetic_Mutation.cpp)
add_executable(567_Permutation_in_String Medium/567_Permutation_in_String.cpp)
add_executable(678_Valid_Parenthesis_String Medium/678_Valid_Parenthesis_String.cpp)
add_executable(2899_Last_Visited_Integers Easy/2899_Last_Visited_Integers.cpp)
add_executable(405_Convert_a_Number_to_Hexadecimal Easy/405_Convert_a_Number_to_Hexadecimal.cpp)
add_executable(420_Strong_Password_Checker Hard/420_Strong_Password_Checker.cpp)
add_executable(643_Maximum_Average_Subarray_I Easy/643_Maximum_Average_Subarray_I.cpp)
add_executable(297_Serialize_and_Deserialize_Binary_Tree Hard/297_Serialize_and_Deserialize_Binary_Tree.cpp)
add_executable(24_Swap_Nodes_in_Pairs Medium/24_Swap_Nodes_in_Pairs.cpp)
add_executable(206_Reverse_Linked_List Easy/206_Reverse_Linked_List.cpp)
add_executable(50_Pow_x_n_ Medium/50_Pow_x_n_.cpp)
add_executable(779_K-th_Symbol_in_Grammar Medium/779_K-th_Symbol_in_Grammar.cpp)
add_executable(912_Sort_an_Array Medium/912_Sort_an_Array.cpp)
add_executable(94_Binary_Tree_Inorder_Traversal Easy/94_Binary_Tree_Inorder_Traversal.cpp)
add_executable(98_Validate_Binary_Search_Tree Medium/98_Validate_Binary_Search_Tree.cpp)
add_executable(52_N-Queens_II Hard/52_N-Queens_II.cpp)
add_executable(1582_Special_Positions_in_a_Binary_Matrix Easy/1582_Special_Positions_in_a_Binary_Matrix.cpp)
add_executable(46_Permutations Medium/46_Permutations.cpp)
add_executable(17_Letter_Combinations_of_a_Phone_Number Medium/17_Letter_Combinations_of_a_Phone_Number.cpp)
add_executable(2482_Difference_Between_Ones_and_Zeros_in_Row_and_Column Medium/2482_Difference_Between_Ones_and_Zeros_in_Row_and_Column.cpp)
add_executable(151_Reverse_Words_in_a_String Medium/151_Reverse_Words_in_a_String.cpp)
add_executable(75_Sort_Colors Medium/75_Sort_Colors.cpp)
add_executable(1436_Destination_City Easy/1436_Destination_City.cpp)
add_executable(2353_Design_a_Food_Rating_System Medium/2353_Design_a_Food_Rating_System.cpp)
add_executable(1913_Maximum_Product_Difference_Between_Two_Pairs Easy/1913_Maximum_Product_Difference_Between_Two_Pairs.cpp)
add_executable(661_Image_Smoother Easy/661_Image_Smoother.cpp)
add_executable(1200_Minimum_Absolute_Difference Easy/1200_Minimum_Absolute_Difference.cpp)
add_executable(2343_Query_Kth_Smallest_Trimmed_Number Medium/2343_Query_Kth_Smallest_Trimmed_Number.cpp)
add_executable(1637_Widest_Vertical_Area_Between_Two_Points_Containing_No_Points Medium/1637_Widest_Vertical_Area_Between_Two_Points_Containing_No_Points.cpp)
add_executable(1786_Number_of_Restricted_Paths_From_First_to_Last_Node Medium/1786_Number_of_Restricted_Paths_From_First_to_Last_Node.cpp)